# ai-redliner

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: pipeline.yml
backend/: .env.example  config.py  litellm_config.yaml.example  main.py  pyproject.toml  start_proxy.sh
backend/agent/: manager.py  mcp_loader.py  prompts.py  tools.py  utils.py
backend/api/: __init__.py  config.py  invoke.py  models.py  sessions.py
backend/models/: __init__.py  litellm_client.py  model_catalog.py
backend/playbooks/: confidentiality.md  intellectual_property.md  termination.md
backend/skills/: contractual_playbook.md  microsoft_actions_tool.md
backend/tools/: fetch.py  microsoft_actions_tool.py
config/: README.md  mcp.example.json
frontend/: manifest.xml  package-lock.json  package.json  tailwind.config.js  tsconfig.json  webpack.config.js
frontend/src/taskpane/: index.tsx  styles.css  taskpane.html  taskpane.ts
frontend/src/taskpane/components/: App.tsx  ChatInput.tsx  ChatInterface.tsx  ChatMessageList.tsx  Help.tsx  HistoryList.tsx  ModificationReview.tsx  Settings.tsx  TestPanel.tsx  sessionUtils.ts  useChatAPI.ts
frontend/src/taskpane/components/ui/: select.tsx
frontend/src/taskpane/microsoft-actions/: MICROSOFT_ACTIONS.md  README.md  append.ts  create_table.ts  delete.ts  delete_row.ts  delete_table.ts  format_bold.ts  format_italic.ts  highlight.ts  insert_row.ts  prepend.ts  replace.ts  strikethrough.ts
