[project]
name = "redliner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "strands-agents[litellm]>=0.1.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "strands-agents-tools>=0.2.20",
    "ddgs>=9.10.0",
    "mcp>=1.0.0"
]
